plugins {
    id 'java'
}

group 'org.emodemo'
version '1.0'
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'junit:junit:4.13.1'
}
